--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="assets/images/favicon-32x32.png" type="image/x-icon">
     <title>Curriculum de Erlis Rivas</title>
+    <style type="text/css">
+
+        @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
+        body {
+            font-family: Roboto, sans-serif;
+        }
+
+    </style>
 </head>
 <body>
     <h1>Curriculum Vitae</h1>
